added video players

--- a/public/index.html
+++ b/public/index.html
@@ -62,9 +62,8 @@
 </section>
 <div class="container">
     <div class="row">
-        <div class="col">
-        </div>
-        <div class="col-lg-10">
+        <!--        <div class="col"></div>-->
+        <div class="col-lg-12">
             <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-indicators">
                     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
@@ -112,9 +111,38 @@
                 </button>
             </div>
         </div>
-        <div class="col">
-        </div>
+        <!--        <div class="col"></div>-->
     </div>
+    <section id="voicesNEC">
+        <div class="row my-3">
+            <div class="col">
+                <div class="ratio ratio-16x9">
+                    <iframe width="373" height="480" src="https://www.youtube.com/embed/SAlbKikfHL0"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
+                </div>
+            </div>
+            <div class="col">
+                <div class="ratio ratio-16x9">
+                    <iframe width="373" height="480" src="https://www.youtube.com/embed/jIEz2p4BPr0"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
+                </div>
+            </div>
+            <div class="col">
+                <div class="ratio ratio-16x9">
+                    <iframe width="373" height="480" src="https://www.youtube.com/embed/aaobYd87KcE"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
+                </div>
+            </div>
+
+
+        </div>
+    </section>
 </div>
 </body>
 </html>
