--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
 </head>
 <body>
 <section id="navigationBar">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg nav-custom">
         <div class="container-fluid">
             <a class="navbar-brand" href="/"><h1>New Earth Conversation </h1>
                 <h3> at Clark University</h3></a>
