--- a/public/index.html
+++ b/public/index.html
@@ -22,20 +22,25 @@
     <!--    Font Awesome Resources-->
     <script src="https://kit.fontawesome.com/6249be3df6.js" crossorigin="anonymous"></script>
 
+    <!--    Google Fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500&family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&family=Poppins:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
-<section id="navigationBar">
-    <nav class="navbar navbar-expand-lg nav-custom">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="/"><h1>New Earth Conversation </h1>
+<section id="navigationBar" style="margin-bottom: 10px;">
+    <nav class="navbar navbar-expand-lg navbar-light nav-custom">
+        <div class="container-fluid" style="padding-left: 8%; padding-right: 8%">
+            <a class="navbar-brand" href="/" style="font-size: large; font-family: 'Oswald', sans-serif;">
+                <h1>New Earth Conversation </h1>
                 <h3> at Clark University</h3></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
-                    aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                    aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation" style="color:black;">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
+                <ul class="navbar-nav" style="font-size: 23px; margin-left: 40px; font-family: 'Poppins', sans-serif;">
+                    <li class="nav-item" >
                         <a class="nav-link active" aria-current="page" href="/">Home</a>
                     </li>
                     <li class="nav-item">
@@ -44,7 +49,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/events">Events</a>
                     </li>
-
+                    <li class="nav-item">
+                        <a class="nav-link" href="/news">News</a>
+                    </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="/resources" id="navbarDropdownMenuLink" role="button"
                            data-bs-toggle="dropdown" aria-expanded="false">
@@ -56,23 +63,21 @@
                             <li><a class="dropdown-item" href="#">Something else here</a></li>
                         </ul>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/news">News</a>
-                    </li>
                 </ul>
             </div>
         </div>
     </nav>
 
 </section>
-<div id ="content">
+<div id="content">
     <div class="container">
         <div class="row">
             <!--        <div class="col"></div>-->
             <div class="col-lg-12">
                 <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-indicators">
-                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0"
+                                class="active"
                                 aria-current="true" aria-label="Slide 1"></button>
                         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
                                 aria-label="Slide 2"></button>
@@ -154,18 +159,33 @@
 </div>
 <section id="footer">
     <footer class="bg-dark text-center text-white">
-        <div class="container p-4 pb-0">
+        <div class="logoDiv" style="margin-top: 5%;">
+            <a href="https://www.clarku.edu/schools/idce/">
+                <img src="img/header_footer/Clark.png" style="margin-top: 15px; margin-bottom: 10px;">
+            </a>
+        </div>
+        <div class="addressDiv" style=" font-family: 'PT Serif', serif; font-size: medium;">
+            <p>950 Main St., Worcester, MA 01610</p>
+        </div>
+        <div class="descriptionDiv d-flex justify-content-center"
+             style="margin-right: 10%; margin-left: 10%; margin-top: 10px;
+                    font-family: 'PT Serif', serif;
+                    font-size: medium;">
+            <p style="font-size: large"><em>A New Earth Conversation&nbsp;</em>
+                is funded through the generous support of the Christopher Reynolds Foundation.</p>
+        </div>
+        <div class="container " >
             <!-- Section: Social media -->
-            <section class="">
-
+            <section class="snsDiv">
                 <!-- Instagram -->
-                <a class="btn btn-outline-light btn-floating m-1" href="https://www.instagram.com/clarknec/" role="button"
+                <a class="btn btn-outline-light btn-floating m-1" href="https://www.instagram.com/clarknec/"
+                   role="button"
                 ><i class="fa-brands fa-instagram"></i></a>
 
                 <!-- facebook -->
-                <a class="btn btn-outline-light btn-floating m-1" href="https://www.facebook.com/A-New-Earth-Conversation-1138118049600755/" role="button"
+                <a class="btn btn-outline-light btn-floating m-1"
+                   href="https://www.facebook.com/A-New-Earth-Conversation-1138118049600755/" role="button"
                 ><i class="fa-brands fa-facebook"></i></a>
-
             </section>
         </div>
     </footer>
