--- a/public/index.html
+++ b/public/index.html
@@ -151,8 +151,12 @@
         <section id="getInvolved">
             <div class="container">
                 <div class="row justify-content-md-center">
-                    <div class="col-10">
+                    <div class="col">
                         <h2 class="text-center">Get Involved</h2>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-6 mx-auto text-center">
                         <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
                             <input type="radio" class="btn-check" name="getInvolvedRadio" id="Students"
                                    autocomplete="off" checked>
@@ -168,6 +172,37 @@
                         </div>
                     </div>
                 </div>
+                <div class="row my-3">
+                    <div class="col"></div>
+                    <div class="col-10">
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-5 py-auto">
+                                    <p>
+                                        As a Clark student, you bring a passion for deep inquiry and thoughtful
+                                        innovation to engaging the major challenges of our time. Through A new Earth
+                                        conversation, we offer a space of community, creativity and reflection to fuel
+                                        our work as we collectively grapple with the climate crisis.
+                                    </p>
+                                    <p>
+                                        As you deepen into your studies here at Clark, we hope you will explore the many
+                                        offerings of NEC and find inspiration in our transformative climate initiative.
+                                    </p>
+                                    <p>
+                                        To get involved, explore some of our emerging campus opportunities:
+                                    </p>
+                                </div>
+                                <div class="col-7">
+                                    <img class="img-fluid" src="img/home/get_involved.jpg">
+
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col"></div>
+                </div>
+
             </div>
         </section>
     </div>
