--- a/public/event_detail.html
+++ b/public/event_detail.html
@@ -1,33 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<meta charset="UTF-8">
-<title>New Earth Conversation</title>
+<head>
+    <meta charset="UTF-8">
+    <title>New Earth Conversation</title>
 
-<link rel="stylesheet" href="css/events.css">
+    <!--    Bootstrap-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
+            crossorigin="anonymous"></script>
 
-<!--    Bootstrap-->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
-      integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
-        crossorigin="anonymous"></script>
+    <!--    jQuery-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
-<!--    jQuery-->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <!--    Datepicker-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
 
-<!--    Datepicker-->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
+    <!--    Font Awesome Resources-->
+    <script src="https://kit.fontawesome.com/6249be3df6.js" crossorigin="anonymous"></script>
 
-<!--    Font Awesome Resources-->
-<script src="https://kit.fontawesome.com/6249be3df6.js" crossorigin="anonymous"></script>
-
-<!--    Google Fonts-->
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Libre+Bodoni:ital,wght@1,700&family=Oswald:wght@500&family=PT+
+    <!--    Google Fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Bodoni:ital,wght@1,700&family=Oswald:wght@500&family=PT+
     Serif:ital,wght@0,400;0,700;1,400;1,700&family=Poppins:wght@300&display=swap" rel="stylesheet">
 
-<script src="js/events.js" defer></script>
+
+    <link rel="stylesheet" href="css/event_detail.css"/>
+
+    <script src="js/event_detail.js" defer></script>
 </head>
 <body>
 <!--Header-->
@@ -38,13 +40,12 @@
                 <h1>New Earth Conversation </h1>
                 <h3> at Clark University</h3></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
-                    aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation"
-                    style="color:black;">
+                    aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation" style="color:black;">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarNavDropdown" >
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav" style="font-size: 23px; margin-left: 40px; font-family: 'Poppins', sans-serif;">
-                    <li class="nav-item">
+                    <li class="nav-item" >
                         <a class="nav-link active" aria-current="page" href="/">Home</a>
                     </li>
                     <li class="nav-item">
@@ -74,13 +75,27 @@
 
 </section>
 
-<section class="container" id="events">
-    <div id="event_list_header">
-        <h1>Events</h1>
+<!--Body-->
+<section class="container" id="event_info"> <!--    Fill this out-->
+    <div class="row">
+        <img id="event_img" src="">
     </div>
-    <div id="event_list" style="padding: 0px 40px 20px;">
+    <div class="row">
+        <div class="col-5">Event Title: </div>
+        <div class="col-7" id="event_title"></div>
+    </div>
+    <div class="row">
+        <div class="col-5">Date: </div>
+        <div class="col-7" id="event_date"></div>
+    </div>
+    <div class="row">
+        <div class="col-5">Overview: </div>
+        <div class="col-7" id="event_overview"></div>
     </div>
 </section>
+<div>
+    <a class="btn btn-lg btn-primary" href="events.html" id="back_button">Back</a>
+</div>
 
 <!--Footer-->
 <section id="footer">
