--- a/public/newsletter.html
+++ b/public/newsletter.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Resources</title>
-
+    <title>NEC Newsletter</title>
 
     <!--    Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -27,9 +26,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Libre+Bodoni:ital,wght@1,700&family=Oswald:wght@500&family=PT+
     Serif:ital,wght@0,400;0,700;1,400;1,700&family=Poppins:wght@300&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="css/network.css">
+    <link rel="stylesheet" href="css/newsletter.css">
 
-    <script src="js/network.js" defer></script>
+    <script src="js/newsletter.js" defer></script>
 
 </head>
 <body>
@@ -79,10 +78,11 @@
     <div class="row justify-content-md-center">
         <div class="col-2"></div>
         <div class="col-8">
-            <h2 class="header text-center">Networks and Initiatives</h2>
-            <p>There are numerous projects and initiatives aimed at addressing the climate crisis, including its causes,
-                social and ecological implications, and possible ways forward. Some of the leading networks for
-                transformative work are:</p>
+            <h2 class="header text-center">NEC Newsletters</h2>
+            <p>
+                Every semester, A new Earth conversation creates a newsletter to share news of our upcoming programs,
+                affiliated courses, and other ways to engage with our work in the coming semester. This is an archive of
+                recent NEC newsletters.</p>
             <section>
                 <ul id="networkList" class="list-group">
                 </ul>
