--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,7 @@
     Serif:ital,wght@0,400;0,700;1,400;1,700&family=Poppins:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
+<!--    Header-->
 <section id="navigationBar" style="margin-bottom: 10px;">
     <nav class="navbar navbar-expand-lg navbar-light nav-custom">
         <div class="container-fluid" style="padding-left: 8%; padding-right: 8%">
@@ -36,16 +37,23 @@
                 <h1>New Earth Conversation </h1>
                 <h3> at Clark University</h3></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
-                    aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation" style="color:black;">
+                    aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation"
+                    style="color:black;">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav" style="font-size: 23px; margin-left: 40px; font-family: 'Poppins', sans-serif;">
-                    <li class="nav-item" >
+                    <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="/">Home</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/about">About</a>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" id="about_dropdown" role="button"
+                           data-bs-toggle="dropdown" aria-expanded="false">
+                            About
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="about_dropdown">
+                            <li><a class="dropdown-item" href="/people">People</a></li>
+                        </ul>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/events">Events</a>
@@ -54,7 +62,7 @@
                         <a class="nav-link" href="/news">News</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="/resources" id="navbarDropdownMenuLink" role="button"
+                        <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" role="button"
                            data-bs-toggle="dropdown" aria-expanded="false">
                             Resources
                         </a>
@@ -68,6 +76,7 @@
             </div>
         </div>
     </nav>
+</section>
 
 </section>
 <div id="content">
