--- a/public/index.html
+++ b/public/index.html
@@ -52,8 +52,10 @@
                             About
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="about_dropdown">
+                            <li><a class="dropdown-item" href="/about_nec">About NEC</a></li>
                             <li><a class="dropdown-item" href="/people">People</a></li>
                         </ul>
+
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/events">Events</a>
@@ -67,8 +69,8 @@
                             Resources
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <li><a class="dropdown-item" href="/network">Network & Initiatives</a></li>
-                            <li><a class="dropdown-item" href="newsletter">NEC Newsletters</a></li>
+                            <li><a class="dropdown-item" href="#">Action</a></li>
+                            <li><a class="dropdown-item" href="#">Another action</a></li>
                             <li><a class="dropdown-item" href="#">Something else here</a></li>
                         </ul>
                     </li>
