--- a/public/about_nec.html
+++ b/public/about_nec.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
     <meta charset="UTF-8">
     <title>New Earth Conversation</title>
 
-    <link rel="stylesheet" href="css/events.css">
+    <link rel="stylesheet" href="css/about_nec.css">
 
     <!--    Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -28,8 +27,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Libre+Bodoni:ital,wght@1,700&family=Oswald:wght@500&family=PT+
     Serif:ital,wght@0,400;0,700;1,400;1,700&family=Poppins:wght@300&display=swap" rel="stylesheet">
-
-    <script src="js/events.js" defer></script>
 </head>
 <body>
 <!--Header-->
@@ -72,8 +69,8 @@
                             Resources
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <li><a class="dropdown-item" href="/network">Network & Initiatives</a></li>
-                            <li><a class="dropdown-item" href="newsletter">NEC Newsletters</a></li>
+                            <li><a class="dropdown-item" href="#">Action</a></li>
+                            <li><a class="dropdown-item" href="#">Another action</a></li>
                             <li><a class="dropdown-item" href="#">Something else here</a></li>
                         </ul>
                     </li>
@@ -83,17 +80,41 @@
     </nav>
 </section>
 
-<section class="container" id="events">
+<section class="container" id="content">
 
-    <div id="event_list_header">
-        <h1>Events</h1>
+    <div id="content_title">
+        <h1>A New Earth Conversation</h1>
+        <h3>A campus-wide climate initiative at Clark University</h3>
+
     </div>
-    <div id="search_bar" class="input-group mb-3" style="padding: 0% 4%;">
-        <input id="search_box" type="search" class="form-control" placeholder="Search for events or dates" aria-label="Search"
-               aria-describedby="basic-addon2" onkeyup="update_events()">
-        <span class="input-group-text" id="basic-addon2"><i class="fas fa-search"></i></span>
-    </div>
-    <div id="event_list" style="padding: 0px 40px 20px;">
+    <div id="content_body">
+        <br>
+
+        <h4>The world faces unprecedented challenges</h4>
+        <p>Our interdependent ecosystem has been de-stabilized by its human inhabitants and the expansion of an industrial
+            economy powered by fossil fuels. The underlying political, economic and social tenets of our world are proving
+            increasingly volatile, destructive and untenable.
+        </p>
+        <p>
+            We are called to grapple with existential questions:
+            <div class="questions">
+                How do we educate in a time of increasing uncertainty, instability and injustice?
+            </div>
+            <div class="questions">
+                How do we educate now for the world we wish to see?
+            </div>
+        </p>
+        <p>
+            For over four years we at Clark University have reflected on the nature and scope of the climate challenge,
+            and our calling as educators and students in the face of it. A new Earth conversation is the fruit of that work.
+        </p>
+        <p>
+            We are creating a transformative new learning environment within the University – one that addresses the
+            climate challenge from a foundation of reckoning, reflection and collective listening. Through discernment,
+            insight, and community, effective engagement and action become possible. This arc of reflection, insight
+            and action is embodied in the distinctive NEC practices of Collaboratives, Council on the Uncertain Human
+            Future (CUHF), Listening in Nature, and public programs.
+        </p>
     </div>
 </section>
 
