--- a/public/newsletter.html
+++ b/public/newsletter.html
@@ -50,6 +50,10 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/about">About</a>
+                        <ul class="dropdown-menu" aria-labelledby="about_dropdown">
+                            <li><a class="dropdown-item" href="/about_nec">About NEC</a></li>
+                            <li><a class="dropdown-item" href="/people">People</a></li>
+                        </ul>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/events">Events</a>
