--- a/public/people.html
+++ b/public/people.html
@@ -55,6 +55,7 @@
                             About
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="about_dropdown">
+                            <li><a class="dropdown-item" href="/about_nec">About NEC</a></li>
                             <li><a class="dropdown-item" href="/people">People</a></li>
                         </ul>
                     </li>
@@ -82,7 +83,7 @@
 </section>
 
 
-<div class="container" style="padding: 0 5%;">
+<div class="container">
     <h3>People</h3>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam, aspernatur cum dolorem enim, facere illo laboriosam nisi quia quod, repudiandae sequi similique sint unde? Ab corporis perspiciatis quod quos voluptatibus?</p>
 
