--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <title>New Earth Conversation</title>
 
     <link rel="stylesheet" href="css/index.css">
+    <script src="js/index.js" defer></script>
 
     <!--    Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -172,16 +173,16 @@
                 <div class="row">
                     <div class="col-6 mx-auto text-center">
                         <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
-                            <input type="radio" class="btn-check" name="getInvolvedRadio" id="Students"
-                                   autocomplete="off" checked>
+                            <input type="radio" class="btn-check" name="getInvolvedRadio" id="Students" value="students"
+                                   autocomplete="off" onclick="UpdateInvolved()" checked>
                             <label class="btn btn-outline-dark" for="Students">Students</label>
 
-                            <input type="radio" class="btn-check" name="getInvolvedRadio" id="Faculty"
-                                   autocomplete="off">
+                            <input type="radio" class="btn-check" name="getInvolvedRadio" id="Faculty" value="faculty"
+                                   autocomplete="off" onclick="UpdateInvolved()">
                             <label class="btn btn-outline-dark" for="Faculty">Faculty</label>
 
-                            <input type="radio" class="btn-check" name="getInvolvedRadio" id="Partners"
-                                   autocomplete="off">
+                            <input type="radio" class="btn-check" name="getInvolvedRadio" id="Partners" value="partners"
+                                   autocomplete="off" onclick="UpdateInvolved()">
                             <label class="btn btn-outline-dark" for="Partners">Partners</label>
                         </div>
                     </div>
@@ -191,7 +192,7 @@
                     <div class="col-10">
                         <div class="container">
                             <div class="row">
-                                <div class="col-5 py-auto">
+                                <div id="involvedText" class="col-5 py-auto">
                                     <p>
                                         As a Clark student, you bring a passion for deep inquiry and thoughtful
                                         innovation to engaging the major challenges of our time. Through A new Earth
@@ -202,12 +203,9 @@
                                         As you deepen into your studies here at Clark, we hope you will explore the many
                                         offerings of NEC and find inspiration in our transformative climate initiative.
                                     </p>
-                                    <p>
-                                        To get involved, explore some of our emerging campus opportunities:
-                                    </p>
                                 </div>
                                 <div class="col-7">
-                                    <img class="img-fluid" src="img/home/get_involved.jpg">
+                                    <img id="involvedImg" class="img-fluid" src="img/home/get_involved.jpg">
 
                                 </div>
 
