added resource pages

--- a/public/index.html
+++ b/public/index.html
@@ -72,7 +72,10 @@
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                             <li><a class="dropdown-item" href="/network">Network & Initiatives</a></li>
                             <li><a class="dropdown-item" href="newsletter">NEC Newsletters</a></li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                            <li><a class="dropdown-item" href="/readings">Readings on the Science</a></li>
+                            <li><a class="dropdown-item" href="/films">Films and Recorded Talks</a></li>
+                            <li><a class="dropdown-item" href="/nature">Listening in Nature <br>Exploration</a></li>
+
                         </ul>
                     </li>
                 </ul>
