added newsletter to footer on index

--- a/public/index.html
+++ b/public/index.html
@@ -87,9 +87,16 @@
 </section>
 <div id="content">
     <section>
-        <div class="text-center my-3">
-            <h2>New Earth Conversation is a transformative <br>
-                climate initiative at Clark University</h2></div>
+        <div class="container my-3">
+            <div class="row">
+<h2 class="text-center">New Earth Conversation (NEC) is a campus-wide climate education initiative at Clark University, motivated
+    by the challenges of the global climate crisis.</h2>
+                <p>Through distinct practices such as Collaborative Courses, Council on the Uncertain Human Future (CUHF),
+                    Listening in Nature, and public programs, NEC offers a collective space on campus that seeks to
+                    transform our learning environment at Clark.</p>
+            </div>
+        </div>
+
     </section>
     <div class="container">
         <div class="row">
@@ -242,7 +249,7 @@
             <p style="font-size: large"><em>A New Earth Conversation&nbsp;</em>
                 is funded through the generous support of the Christopher Reynolds Foundation.</p>
         </div>
-        <div class="container " >
+        <div class="container ">
             <!-- Section: Social media -->
             <section class="snsDiv">
                 <!-- Instagram -->
@@ -256,6 +263,7 @@
                 ><i class="fa-brands fa-facebook"></i></a>
             </section>
         </div>
+        <a style="text-decoration: none; font-family: 'PT Serif', serif; font-size: medium;" class="text-white" href="https://newearthconversation.us17.list-manage.com/subscribe?u=625995360e925ce8132137949&id=6d00fffb54"> Subscribe to our Newsletter!</a>
     </footer>
 </section>
 </body>
