--- a/public/index.html
+++ b/public/index.html
@@ -61,9 +61,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/events">Events</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/news">News</a>
-                    </li>
+
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" role="button"
                            data-bs-toggle="dropdown" aria-expanded="false">
@@ -78,13 +76,18 @@
 
                         </ul>
                     </li>
+                    <li>
+                        <a class="nav-link active login" href="/login">Login</a>
+                        <a class="nav-link active login" href="/register">Register</a>
+                        <div class="navbar-brand mb-0 logout">Hello, <a id="showname" href="/account"></a></div>
+                        <a class="nav-link active logout" href="/logout">Log out</a>
+                    </li>
                 </ul>
             </div>
         </div>
     </nav>
 </section>
 
-</section>
 <div id="content">
     <section>
         <div class="container my-3">
