Finished people page functionality.

--- a/public/network.html
+++ b/public/network.html
@@ -60,7 +60,7 @@
                         <a class="nav-link" href="/events">Events</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/news">News</a>
+                        <a class="nav-link" href="/our_work">Our Work</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="/resources" id="navbarDropdownMenuLink" role="button"
