--- a/public/our_work.html
+++ b/public/our_work.html
@@ -1,37 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>NEC Newsletter</title>
+<meta charset="UTF-8">
+<title>New Earth Conversation</title>
 
-    <!--    Bootstrap-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
-            crossorigin="anonymous"></script>
+<!--    CSS-->
+<link rel="stylesheet" href="css/our_work.css">
 
-    <!--    jQuery-->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<!--    Bootstrap-->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+      integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
+        crossorigin="anonymous"></script>
 
-    <!--    Datepicker-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
+<!--    jQuery-->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
-    <!--    Font Awesome Resources-->
-    <script src="https://kit.fontawesome.com/6249be3df6.js" crossorigin="anonymous"></script>
+<!--    Datepicker-->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
 
-    <!--    Google Fonts-->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Libre+Bodoni:ital,wght@1,700&family=Oswald:wght@500&family=PT+
-    Serif:ital,wght@0,400;0,700;1,400;1,700&family=Poppins:wght@300&display=swap" rel="stylesheet">
+<!--    Font Awesome Resources-->
+<script src="https://kit.fontawesome.com/6249be3df6.js" crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" href="css/newsletter.css">
+<!--    Google Fonts-->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500&family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&family=Poppins:wght@300&display=swap"
+      rel="stylesheet">
 
-    <script src="js/newsletter.js" defer></script>
+<!--    JS-->
+<script src="js/our_work.js" defer></script>
 
 </head>
 <body>
+<!--Header-->
 <section id="navigationBar" style="margin-bottom: 10px;">
     <nav class="navbar navbar-expand-lg navbar-light nav-custom">
         <div class="container-fluid" style="padding-left: 8%; padding-right: 8%">
@@ -48,8 +50,11 @@
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="/">Home</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/about">About</a>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" id="about_dropdown" role="button"
+                           data-bs-toggle="dropdown" aria-expanded="false">
+                            About
+                        </a>
                         <ul class="dropdown-menu" aria-labelledby="about_dropdown">
                             <li><a class="dropdown-item" href="/about_nec">About NEC</a></li>
                             <li><a class="dropdown-item" href="/people">People</a></li>
@@ -62,13 +67,13 @@
                         <a class="nav-link" href="/our_work">Our Work</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="/resources" id="navbarDropdownMenuLink" role="button"
+                        <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" role="button"
                            data-bs-toggle="dropdown" aria-expanded="false">
                             Resources
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <li><a class="dropdown-item" href="/network">Network & Initiatives</a></li>
-                            <li><a class="dropdown-item" href="newsletter">NEC Newsletters</a></li>
+                            <li><a class="dropdown-item" href="#">Action</a></li>
+                            <li><a class="dropdown-item" href="#">Another action</a></li>
                             <li><a class="dropdown-item" href="#">Something else here</a></li>
                         </ul>
                     </li>
@@ -76,27 +81,26 @@
             </div>
         </div>
     </nav>
-
 </section>
-<div class="container">
-    <div class="row justify-content-md-center">
-        <div class="col-2"></div>
-        <div class="col-8">
-            <h2 class="header text-center">NEC Newsletters</h2>
-            <p>
-                Every semester, A new Earth conversation creates a newsletter to share news of our upcoming programs,
-                affiliated courses, and other ways to engage with our work in the coming semester. This is an archive of
-                recent NEC newsletters.</p>
-            <section>
-                <ul id="networkList" class="list-group">
-                </ul>
-            </section>
-        </div>
-        <div class="col-2"></div>
-    </div>
 
+
+<div class="container">
+    <h1 id="our_work_header">Our Work</h1>
+
+    <h3>Spotlight</h3>
+    <div class="row" id="spotlight" style="border: 1px black solid"></div>
+
+    <h3>Public Programs</h3>
+    <div class="row" id="public_programs" style="border: 1px black solid"></div>
+
+    <h3>Public Lectures</h3>
+    <div class="row" id="public_lectures" style="border: 1px black solid"></div>
+
+    <h3>Readers</h3>
+    <div class="row" id="readers" style="border: 1px black solid"></div>
 </div>
 
+<!--Footer-->
 <section id="footer">
     <footer class="bg-dark text-center text-white">
         <div class="logoDiv" style="margin-top: 5%;">
@@ -114,7 +118,7 @@
             <p style="font-size: large"><em>A New Earth Conversation&nbsp;</em>
                 is funded through the generous support of the Christopher Reynolds Foundation.</p>
         </div>
-        <div class="container ">
+        <div class="container " >
             <!-- Section: Social media -->
             <section class="snsDiv">
                 <!-- Instagram -->
