--- a/public/people.html
+++ b/public/people.html
@@ -3,7 +3,8 @@
 <meta charset="UTF-8">
 <title>New Earth Conversation</title>
 
-<link rel="stylesheet" href="css/index.css">
+<!--    CSS-->
+<link rel="stylesheet" href="css/people.css">
 
 <!--    Bootstrap-->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -63,7 +64,7 @@
                         <a class="nav-link" href="/events">Events</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/news">News</a>
+                        <a class="nav-link" href="/our_work">Our Work</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" role="button"
@@ -84,8 +85,8 @@
 
 
 <div class="container">
-    <h3>People</h3>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam, aspernatur cum dolorem enim, facere illo laboriosam nisi quia quod, repudiandae sequi similique sint unde? Ab corporis perspiciatis quod quos voluptatibus?</p>
+    <h1 id="people_header">People</h1>
+    <img src="img/about/people/NEC-People-Page.jpg" alt="" style="width: 60%">
 
     <h3>NEC Staff</h3>
     <div class="row" id="staff" style="border: 1px black solid"></div>
