--- a/public/index.html
+++ b/public/index.html
@@ -62,6 +62,10 @@
                         <a class="nav-link" href="/events">Events</a>
                     </li>
 
+                    <li class="nav-item">
+                        <a class="nav-link" href="/our_work">Our Work</a>
+                    </li>
+
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" role="button"
                            data-bs-toggle="dropdown" aria-expanded="false">
@@ -271,3 +275,15 @@
 </section>
 </body>
 </html>
+
+Emily-Braddock.png
+
+spotlight_balancing_forests_and_dev_description.png
+
+
+
+spotlight_governing_extractive_industries_description.png
+
+spotlight_recent_publication_description.png
+
+spotlight_traina_exhibit_2.jpg
