fixed getInvolved section

--- a/public/index.html
+++ b/public/index.html
@@ -223,8 +223,8 @@
                                         offerings of NEC and find inspiration in our transformative climate initiative.
                                     </p>
                                 </div>
-                                <div class="col-7">
-                                    <img id="involvedImg" class="img-fluid" src="img/home/get_involved.jpg">
+                                <div id="involvedImg" class="col-7">
+                                    <img class="img-fluid" src="img/home/getInvolvedStudents.jpg">
 
                                 </div>
 
