added account like feature

--- a/public/event_detail.html
+++ b/public/event_detail.html
@@ -99,6 +99,8 @@
 </section>
 <div>
     <a class="btn btn-lg btn-primary" href="events.html" id="back_button">Back</a>
+    <button class="btn btn-lg btn-primary" onclick="onLikeEvent()">Interested!</button>
+
 </div>
 
 <!--Footer-->
