Finished people page functionality.

--- a/public/our_work_detail.html
+++ b/public/our_work_detail.html
@@ -86,13 +86,14 @@
         <img id="img" src="" style="width: 50%">
     </div>
     <div class="row">
+        <h2 id="title"></h2>
+    </div>
+    <div class="row">
         <div id="description"></div>
     </div>
-    <hr id="line_video">
     <div class="row">
         <a id="video" href=""></a>
     </div>
-    <hr id="line_bios">
     <div class="row">
         <div id="bios"></div>
     </div>
