--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav" style="font-size: 23px; margin-left: 20px; font-family: 'Poppins', sans-serif;">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/">Home</a>
+                        <a class="nav-link" aria-current="page" href="/">Home</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" id="about_dropdown" role="button"
@@ -79,8 +79,8 @@
                         </ul>
                     </li>
                     <li style="font-size: medium">
-                        <a class="nav-link active login" href="/login">Login</a>
-                        <a class="nav-link active login" href="/register">Register</a>
+                        <a class="nav-link login" href="/login">Login</a>
+                        <a class="nav-link login" href="/register">Register</a>
                         <div class="navbar-brand mb-0 logout" style="font-size: medium">Hello, <a id="showname"
                                                                                                   href="/account"></a>
                         </div>
