--- a/public/courses.html
+++ b/public/courses.html
@@ -48,7 +48,7 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav" style="font-size: 23px; margin-left: 20px; font-family: 'Poppins', sans-serif;">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/">Home</a>
+                        <a class="nav-link" aria-current="page" href="/">Home</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" id="about_dropdown" role="button"
@@ -61,7 +61,6 @@
                             <li><a class="dropdown-item" href="/courses">NEC Courses</a></li>
                             <li><a class="dropdown-item" href="/people">People</a></li>
                         </ul>
-
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/events">Events</a>
@@ -83,9 +82,11 @@
                         </ul>
                     </li>
                     <li style="font-size: medium">
-                        <a class="nav-link active login" href="/login">Login</a>
-                        <a class="nav-link active login" href="/register">Register</a>
-                        <div class="navbar-brand mb-0 logout">Hello, <a id="showname" href="/account"></a></div>
+                        <a class="nav-link login" href="/login">Login</a>
+                        <a class="nav-link login" href="/register">Register</a>
+                        <div class="navbar-brand mb-0 logout" style="font-size: medium">Hello, <a id="showname"
+                                                                                                  href="/account"></a>
+                        </div>
                         <a class="nav-link active logout" href="/logout">Log out</a>
                     </li>
                 </ul>
@@ -93,7 +94,6 @@
         </div>
     </nav>
 </section>
-
 <section class="container" id="content">
     <h1 id="content_title">NEC Courses</h1>
     <div id="content_body">
