--- a/public/login.html
+++ b/public/login.html
@@ -41,9 +41,9 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                <ul class="navbar-nav" style="font-size: 23px; margin-left: 40px; font-family: 'Poppins', sans-serif;">
+                <ul class="navbar-nav" style="font-size: 23px; margin-left: 20px; font-family: 'Poppins', sans-serif;">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/">Home</a>
+                        <a class="nav-link" aria-current="page" href="/">Home</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" id="about_dropdown" role="button"
@@ -52,14 +52,17 @@
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="about_dropdown">
                             <li><a class="dropdown-item" href="/about_nec">About NEC</a></li>
+                            <li><a class="dropdown-item" href="/intentions">Intentions</a></li>
+                            <li><a class="dropdown-item" href="/courses">NEC Courses</a></li>
                             <li><a class="dropdown-item" href="/people">People</a></li>
                         </ul>
-
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/events">Events</a>
                     </li>
-
+                    <li class="nav-item">
+                        <a class="nav-link" href="/our_work">Our Work</a>
+                    </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" role="button"
                            data-bs-toggle="dropdown" aria-expanded="false">
@@ -71,8 +74,15 @@
                             <li><a class="dropdown-item" href="/readings">Readings on the Science</a></li>
                             <li><a class="dropdown-item" href="/films">Films and Recorded Talks</a></li>
                             <li><a class="dropdown-item" href="/nature">Listening in Nature <br>Exploration</a></li>
-
                         </ul>
+                    </li>
+                    <li style="font-size: medium">
+                        <a class="nav-link login" href="/login">Login</a>
+                        <a class="nav-link login" href="/register">Register</a>
+                        <div class="navbar-brand mb-0 logout" style="font-size: medium">Hello, <a id="showname"
+                                                                                                  href="/account"></a>
+                        </div>
+                        <a class="nav-link active logout" href="/logout">Log out</a>
                     </li>
                 </ul>
             </div>
