--- a/public/nature.html
+++ b/public/nature.html
@@ -2,16 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Films and Recorded Talks</title>
-</head>
-<body>
-
-</body>
-</html><!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Readings on the Science</title>
+    <title>Listening in Nature</title>
 
 
     <!--    Bootstrap-->
@@ -54,14 +45,19 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                <ul class="navbar-nav" style="font-size: 23px; margin-left: 40px; font-family: 'Poppins', sans-serif;">
+                <ul class="navbar-nav" style="font-size: 23px; margin-left: 20px; font-family: 'Poppins', sans-serif;">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/">Home</a>
+                        <a class="nav-link" aria-current="page" href="/">Home</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/about">About</a>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" id="about_dropdown" role="button"
+                           data-bs-toggle="dropdown" aria-expanded="false">
+                            About
+                        </a>
                         <ul class="dropdown-menu" aria-labelledby="about_dropdown">
                             <li><a class="dropdown-item" href="/about_nec">About NEC</a></li>
+                            <li><a class="dropdown-item" href="/intentions">Intentions</a></li>
+                            <li><a class="dropdown-item" href="/courses">NEC Courses</a></li>
                             <li><a class="dropdown-item" href="/people">People</a></li>
                         </ul>
                     </li>
@@ -69,24 +65,33 @@
                         <a class="nav-link" href="/events">Events</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/news">News</a>
+                        <a class="nav-link" href="/our_work">Our Work</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="/resources" id="navbarDropdownMenuLink" role="button"
+                        <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" role="button"
                            data-bs-toggle="dropdown" aria-expanded="false">
                             Resources
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                             <li><a class="dropdown-item" href="/network">Network & Initiatives</a></li>
                             <li><a class="dropdown-item" href="newsletter">NEC Newsletters</a></li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                            <li><a class="dropdown-item" href="/readings">Readings on the Science</a></li>
+                            <li><a class="dropdown-item" href="/films">Films and Recorded Talks</a></li>
+                            <li><a class="dropdown-item" href="/nature">Listening in Nature <br>Exploration</a></li>
                         </ul>
+                    </li>
+                    <li style="font-size: medium">
+                        <a class="nav-link login" href="/login">Login</a>
+                        <a class="nav-link login" href="/register">Register</a>
+                        <div class="navbar-brand mb-0 logout" style="font-size: medium">Hello, <a id="showname"
+                                                                                                  href="/account"></a>
+                        </div>
+                        <a class="nav-link active logout" href="/logout">Log out</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
-
 </section>
 <div class="container">
     <div class="row justify-content-md-center">
@@ -101,15 +106,15 @@
                 invite you to share these moments with all of us at Clark using the hashtags #ClarkNEC and
                 #ClarkLIN.</p>
             <hr>
-<h5>Find the Natural Spaces Around You</h5>
-            <p>Explore our Wayfinding Maps</p>
+            <h5>Find the Natural Spaces Around You</h5>
+            <p>Explore our <a href="https://newearthconversation.org/worcester-green-spaces/"> Wayfinding Maps</a></p>
             <h5>Share a Creative Expression</h5>
-            <p>Create a Mandala from Nature</p>
-<p>Explore with our Listening in Nature Treasure Hunt</p>
-            <p>Share a nature-inspired art piece</p>
+            <p>Create a <a href="https://newearthconversation.org/mandalas-from-nature/">Mandala</a> from Nature</p>
+            <p>Explore with our Listening in Nature Treasure Hunt</p>
+            <p><a href="https://newearthconversation.org/artistic-explorations-in-nature/">Share a nature-inspired art piece</a></p>
             <h5>Explore Ways of Listening</h5>
             <p>Recommended readings from the Goddard Library</p>
-            <p>Listening in Nature Reader</p>
+            <p><a href="https://newearthconversation.org/listening-in-nature-a-reader/">Listening in Nature Reader</a></p>
         </div>
         <div class="col-2"></div>
     </div>
