--- a/public/person_detail.html
+++ b/public/person_detail.html
@@ -1,34 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<meta charset="UTF-8">
-<title>New Earth Conversation</title>
+<head>
+    <meta charset="UTF-8">
+    <title>New Earth Conversation</title>
 
-<link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/index.css">
 
-<!--    Bootstrap-->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
-      integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
-        crossorigin="anonymous"></script>
+    <!--    Bootstrap-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
+            crossorigin="anonymous"></script>
 
-<!--    jQuery-->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <!--    jQuery-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
-<!--    Datepicker-->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
+    <!--    Datepicker-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
 
-<!--    Font Awesome Resources-->
-<script src="https://kit.fontawesome.com/6249be3df6.js" crossorigin="anonymous"></script>
+    <!--    Font Awesome Resources-->
+    <script src="https://kit.fontawesome.com/6249be3df6.js" crossorigin="anonymous"></script>
 
-<!--    Google Fonts-->
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500&family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&family=Poppins:wght@300&display=swap"
-      rel="stylesheet">
+    <!--    Google Fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500&family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&family=Poppins:wght@300&display=swap"
+          rel="stylesheet">
 
-<!--    JS-->
-<script src="js/person_detail.js" defer></script>
+    <!--    JS-->
+    <script src="js/person_detail.js" defer></script>
 
 </head>
 <body>
@@ -45,9 +46,9 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                <ul class="navbar-nav" style="font-size: 23px; margin-left: 40px; font-family: 'Poppins', sans-serif;">
+                <ul class="navbar-nav" style="font-size: 23px; margin-left: 20px; font-family: 'Poppins', sans-serif;">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/">Home</a>
+                        <a class="nav-link" aria-current="page" href="/">Home</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" id="about_dropdown" role="button"
@@ -55,6 +56,9 @@
                             About
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="about_dropdown">
+                            <li><a class="dropdown-item" href="/about_nec">About NEC</a></li>
+                            <li><a class="dropdown-item" href="/intentions">Intentions</a></li>
+                            <li><a class="dropdown-item" href="/courses">NEC Courses</a></li>
                             <li><a class="dropdown-item" href="/people">People</a></li>
                         </ul>
                     </li>
@@ -70,10 +74,20 @@
                             Resources
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                            <li><a class="dropdown-item" href="/network">Network & Initiatives</a></li>
+                            <li><a class="dropdown-item" href="newsletter">NEC Newsletters</a></li>
+                            <li><a class="dropdown-item" href="/readings">Readings on the Science</a></li>
+                            <li><a class="dropdown-item" href="/films">Films and Recorded Talks</a></li>
+                            <li><a class="dropdown-item" href="/nature">Listening in Nature <br>Exploration</a></li>
                         </ul>
+                    </li>
+                    <li style="font-size: medium">
+                        <a class="nav-link login" href="/login">Login</a>
+                        <a class="nav-link login" href="/register">Register</a>
+                        <div class="navbar-brand mb-0 logout" style="font-size: medium">Hello, <a id="showname"
+                                                                                                  href="/account"></a>
+                        </div>
+                        <a class="nav-link active logout" href="/logout">Log out</a>
                     </li>
                 </ul>
             </div>
@@ -86,15 +100,15 @@
         <img id="img" src="" style="width: 50%">
     </div>
     <div class="row">
-        <div class="col-5">Name: </div>
+        <div class="col-5">Name:</div>
         <div class="col-7" id="name"></div>
     </div>
     <div class="row">
-        <div class="col-5">Role: </div>
+        <div class="col-5">Role:</div>
         <div class="col-7" id="role"></div>
     </div>
     <div class="row">
-        <div class="col-5">Bio: </div>
+        <div class="col-5">Bio:</div>
         <div class="col-7" id="bio"></div>
     </div>
 </section>
@@ -120,7 +134,7 @@
             <p style="font-size: large"><em>A New Earth Conversation&nbsp;</em>
                 is funded through the generous support of the Christopher Reynolds Foundation.</p>
         </div>
-        <div class="container " >
+        <div class="container ">
             <!-- Section: Social media -->
             <section class="snsDiv">
                 <!-- Instagram -->
