--- a/public/register.html
+++ b/public/register.html
@@ -40,6 +40,66 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav" style="font-size: 23px; margin-left: 20px; font-family: 'Poppins', sans-serif;">
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="/">Home</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" id="about_dropdown" role="button"
+                           data-bs-toggle="dropdown" aria-expanded="false">
+                            About
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="about_dropdown">
+                            <li><a class="dropdown-item" href="/about_nec">About NEC</a></li>
+                            <li><a class="dropdown-item" href="/intentions">Intentions</a></li>
+                            <li><a class="dropdown-item" href="/courses">NEC Courses</a></li>
+                            <li><a class="dropdown-item" href="/people">People</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/events">Events</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/our_work">Our Work</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" role="button"
+                           data-bs-toggle="dropdown" aria-expanded="false">
+                            Resources
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                            <li><a class="dropdown-item" href="/network">Network & Initiatives</a></li>
+                            <li><a class="dropdown-item" href="newsletter">NEC Newsletters</a></li>
+                            <li><a class="dropdown-item" href="/readings">Readings on the Science</a></li>
+                            <li><a class="dropdown-item" href="/films">Films and Recorded Talks</a></li>
+                            <li><a class="dropdown-item" href="/nature">Listening in Nature <br>Exploration</a></li>
+                        </ul>
+                    </li>
+                    <li style="font-size: medium">
+                        <a class="nav-link login" href="/login">Login</a>
+                        <a class="nav-link login" href="/register">Register</a>
+                        <div class="navbar-brand mb-0 logout" style="font-size: medium">Hello, <a id="showname"
+                                                                                                  href="/account"></a>
+                        </div>
+                        <a class="nav-link active logout" href="/logout">Log out</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+</section>
+<section id="navigationBar" style="margin-bottom: 10px;">
+    <nav class="navbar navbar-expand-lg navbar-light nav-custom">
+        <div class="container-fluid" style="padding-left: 8%; padding-right: 8%">
+            <a class="navbar-brand" href="/" style="font-size: large; font-family: 'Oswald', sans-serif;">
+                <h1>New Earth Conversation </h1>
+                <h3> at Clark University</h3></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+                    aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation"
+                    style="color:black;">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav" style="font-size: 23px; margin-left: 40px; font-family: 'Poppins', sans-serif;">
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="/">Home</a>
