--- a/public/register.html
+++ b/public/register.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <title>Register</title>
 
+    <!--    CSS-->
+    <link rel="stylesheet" href="css/resource.css">
+
     <!--    Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
           rel="stylesheet"
@@ -13,10 +16,11 @@
             integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
             crossorigin="anonymous"></script>
 
-    <!--    Google font-->
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&family=RocknRoll+One&display=swap"
-          rel="stylesheet">
+    <!--    Google Fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Bodoni:ital,wght@1,700&family=Oswald:wght@500&family=PT+
+    Serif:ital,wght@0,400;0,700;1,400;1,700&family=Poppins:wght@300&display=swap" rel="stylesheet">
 
     <!--    fontawesome-->
     <script src="https://kit.fontawesome.com/e5b5eed843.js" crossorigin="anonymous"></script>
@@ -88,55 +92,6 @@
         </div>
     </nav>
 </section>
-<section id="navigationBar" style="margin-bottom: 10px;">
-    <nav class="navbar navbar-expand-lg navbar-light nav-custom">
-        <div class="container-fluid" style="padding-left: 8%; padding-right: 8%">
-            <a class="navbar-brand" href="/" style="font-size: large; font-family: 'Oswald', sans-serif;">
-                <h1>New Earth Conversation </h1>
-                <h3> at Clark University</h3></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
-                    aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation"
-                    style="color:black;">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                <ul class="navbar-nav" style="font-size: 23px; margin-left: 40px; font-family: 'Poppins', sans-serif;">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/">Home</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" id="about_dropdown" role="button"
-                           data-bs-toggle="dropdown" aria-expanded="false">
-                            About
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="about_dropdown">
-                            <li><a class="dropdown-item" href="/about_nec">About NEC</a></li>
-                            <li><a class="dropdown-item" href="/people">People</a></li>
-                        </ul>
-
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/events">Events</a>
-                    </li>
-
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" role="button"
-                           data-bs-toggle="dropdown" aria-expanded="false">
-                            Resources
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <li><a class="dropdown-item" href="/network">Network & Initiatives</a></li>
-                            <li><a class="dropdown-item" href="newsletter">NEC Newsletters</a></li>
-                            <li><a class="dropdown-item" href="/readings">Readings on the Science</a></li>
-                            <li><a class="dropdown-item" href="/films">Films and Recorded Talks</a></li>
-                            <li><a class="dropdown-item" href="/nature">Listening in Nature <br>Exploration</a></li>
-
-                        </ul>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
 </section>
 <div class="container mt-5">
 
