Finished people page functionality.

--- a/public/event_detail.html
+++ b/public/event_detail.html
@@ -96,7 +96,6 @@
 
 <!--Body-->
 <section class="container" id="event_info"> <!--    Fill this out-->
-
     <div class="row">
         <div class=" imgDiv col-lg-4 col-md-6 col-sm-12">
             <img id="event_img" src="">
@@ -111,8 +110,8 @@
             </div>
         </div>
         <div class="buttons">
-            <a class="btn btn-lg btn-primary" href="events.html" id="back_button">Back</a>
-            <button class="btn btn-lg btn-primary" onclick="onLikeEvent()">Interested!</button>
+            <a class="btn btn-lg btn-primary" href="events.html" id="back_button" style="background-color: #b5c99a; font-size: 17px; margin-bottom: 10px">Back</a>
+            <button class="btn btn-lg btn-primary" onclick="onLikeEvent()" style="background-color: #b5c99a; font-size: 17px; margin-bottom: 10px">Interested!</button>
         </div>
     </div>
 
@@ -137,7 +136,7 @@
             <p style="font-size: large"><em>A New Earth Conversation&nbsp;</em>
                 is funded through the generous support of the Christopher Reynolds Foundation.</p>
         </div>
-        <div class="container ">
+        <div class="container " >
             <!-- Section: Social media -->
             <section class="snsDiv">
                 <!-- Instagram -->
