--- a/public/our_work.html
+++ b/public/our_work.html
@@ -99,17 +99,17 @@
 <div class="container">
     <h1 id="our_work_header">Our Work</h1>
 
-    <h3>Spotlight</h3>
-    <div class="row" id="spotlight" style="border: 1px black solid"></div>
+    <h3 class="h">Spotlight</h3>
+    <div class="row" id="spotlight" style="border: 1px black solid; padding: 5px; margin: 4px"></div>
 
-    <h3>Public Programs</h3>
-    <div class="row" id="public_programs" style="border: 1px black solid"></div>
+    <h3 class="h">Public Programs</h3>
+    <div class="row" id="public_programs" style="border: 1px black solid; padding: 5px; margin: 4px"></div>
 
-    <h3>Public Lectures</h3>
-    <div class="row" id="public_lectures" style="border: 1px black solid"></div>
+    <h3 class="h">Public Lectures</h3>
+    <div class="row" id="public_lectures" style="border: 1px black solid; padding: 5px; margin: 4px"></div>
 
-    <h3>Readers</h3>
-    <div class="row" id="readers" style="border: 1px black solid"></div>
+    <h3 class="h">Readers</h3>
+    <div class="row" id="readers" style="border: 1px black solid; padding: 5px; margin: 4px"></div>
 </div>
 
 <!--Footer-->
