--- a/public/person_detail.html
+++ b/public/person_detail.html
@@ -113,7 +113,7 @@
     </div>
 </section>
 <div>
-    <a class="btn btn-lg btn-primary" href="people.html" id="back_button">Back</a>
+    <a class="btn btn-lg" href="people.html" id="back_button" style="background-color: #b5c99a; font-size: 17px; margin-bottom: 10px">Back</a>
 </div>
 
 <!--Footer-->
