--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
     <title>New Earth Conversation</title>
 
     <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/navbar.css">
+
     <script src="js/index.js" defer></script>
 
     <!--    Bootstrap-->
