--- a/public/about_nec.html
+++ b/public/about_nec.html
@@ -5,6 +5,7 @@
     <title>New Earth Conversation</title>
 
     <link rel="stylesheet" href="css/about_nec.css">
+    <link rel="stylesheet" href="css/navbar.css">
 
     <!--    Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
