--- a/public/events.html
+++ b/public/events.html
@@ -6,6 +6,7 @@
     <title>New Earth Conversation</title>
 
     <link rel="stylesheet" href="css/events.css">
+    <link rel="stylesheet" href="css/navbar.css">
 
     <!--    Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
