--- a/public/films.html
+++ b/public/films.html
@@ -37,6 +37,7 @@
     Serif:ital,wght@0,400;0,700;1,400;1,700&family=Poppins:wght@300&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="css/resource.css">
+    <link rel="stylesheet" href="css/navbar.css">
 
     <script src="js/films.js" defer></script>
 
