--- a/public/people.html
+++ b/public/people.html
@@ -1,35 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <meta charset="UTF-8">
-<title>New Earth Conversation</title>
+<head>
+    <title>New Earth Conversation</title>
 
-<!--    CSS-->
-<link rel="stylesheet" href="css/people.css">
+    <!--    CSS-->
+    <link rel="stylesheet" href="css/people.css">
+    <link rel="stylesheet" href="css/navbar.css">
 
-<!--    Bootstrap-->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
-      integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
-        crossorigin="anonymous"></script>
+    <!--    Bootstrap-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
+            crossorigin="anonymous"></script>
 
-<!--    jQuery-->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <!--    jQuery-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
-<!--    Datepicker-->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
+    <!--    Datepicker-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
 
-<!--    Font Awesome Resources-->
-<script src="https://kit.fontawesome.com/6249be3df6.js" crossorigin="anonymous"></script>
+    <!--    Font Awesome Resources-->
+    <script src="https://kit.fontawesome.com/6249be3df6.js" crossorigin="anonymous"></script>
 
-<!--    Google Fonts-->
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500&family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&family=Poppins:wght@300&display=swap"
-      rel="stylesheet">
+    <!--    Google Fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500&family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&family=Poppins:wght@300&display=swap"
+          rel="stylesheet">
 
-<!--    JS-->
-<script src="js/people.js" defer></script>
+    <!--    JS-->
+    <script src="js/people.js" defer></script>
 
 </head>
 <body>
@@ -132,7 +134,7 @@
             <p style="font-size: large"><em>A New Earth Conversation&nbsp;</em>
                 is funded through the generous support of the Christopher Reynolds Foundation.</p>
         </div>
-        <div class="container " >
+        <div class="container ">
             <!-- Section: Social media -->
             <section class="snsDiv">
                 <!-- Instagram -->
