--- a/public/register.html
+++ b/public/register.html
@@ -6,6 +6,7 @@
 
     <!--    CSS-->
     <link rel="stylesheet" href="css/resource.css">
+    <link rel="stylesheet" href="css/navbar.css">
 
     <!--    Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
@@ -92,7 +93,7 @@
         </div>
     </nav>
 </section>
-</section>
+
 <div class="container mt-5">
 
     <div class="row justify-content-center">
