reformated likes page

--- a/src/account.html
+++ b/src/account.html
@@ -88,6 +88,14 @@
             <h1 id="name"></h1>
             <h3>Interested Events:</h3>
             <ul id="event_list" class="list-group">
+                <li class="list-group-item">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-6"> Event Name:
+                            </div>
+                            <div class="col-6">Date: </div>
+                        </div>
+                    </div></li>
             </ul>
         </div>
     </div>
